# rustikub

./: .gitignore  Cargo.toml  Dockerfile  README.md
resources/: pg_rustikub_schema_dump.sql  test.txt
sql/: dev.sql
src/: domain.rs  game_loop.rs  main.rs  rummikub_domain.rs
src/domain/: boneyard.rs  initial_meld.rs  layout.rs  mod.rs  player.rs  player_rack.rs  score_value.rs  sets.rs  table.rs  tiles.rs
src/domain/player/: info.rs  initial_meld.rs  rack.rs
src/domain/sets/: group.rs  mod.rs  run.rs
src/domain/table/: boneyard.rs  face_up.rs  manipulation.rs  mod.rs
src/domain/tiles/: color.rs  mod.rs  number.rs  tile_sequence.rs
src/game_loop/: meta.rs  mod.rs  state.rs
src/persistence/: dto_adapters.rs  mod.rs
tests/: integration_tests_only.rs  run_game_for_debugging.rs
