[package]
name = "rustikub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.26.3"
strum_macros = "0.26.4"
rand = "0.8.5"
colored = "2.0.4"
log = "0.4.20"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }

